--- a/DevExpress.VideoRent.Wpf/AthletsList/AthletsEditView.xaml
+++ b/DevExpress.VideoRent.Wpf/AthletsList/AthletsEditView.xaml
@@ -4,7 +4,7 @@
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
     xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:dxgc="clr-namespace:DevExpress.Xpf.Grid;assembly=DevExpress.Xpf.Grid.v13.1.Core"
+    xmlns:dxgc="clr-namespace:DevExpress.Xpf.Grid;assembly=DevExpress.Xpf.Grid.v21.2.Core"
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
@@ -49,7 +49,7 @@
     <helpers:DataBindingsHelper.Bindings>
         <helpers:BindingsInfoCollection DataContext="{Binding Source={StaticResource DataSource}, Path=DataObject}">
             <helpers:BindingInfo ElementName="resource:ElementLayoutDataStore" Property="{x:Static local:ElementLayoutDataStore.DisposeSignalSlotProperty}" Value="{Binding DisposeSignal}" />
-            <helpers:BindingInfo ElementName="CustomersGrid" Property="{x:Static  helpers:FocusedRowRestoringHelper.ItemsSourceInterfaceProperty}" Value="{Binding EditObject.VideoRentObjects}" />
+            <helpers:BindingInfo ElementName="AthletsGrid" Property="{x:Static  helpers:FocusedRowRestoringHelper.ItemsSourceInterfaceProperty}" Value="{Binding EditObject.VideoRentObjects}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:GridViewBase.FocusedRowProperty}" Value="{Binding CurrentRecord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.MouseDoubleClickProperty}" Value="{Binding Detail.CommandEdit}" />
             <helpers:ValueInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.MouseDoubleClickParameterProperty}" Value="{x:Static local:WpfViewsManager.CategoryAthlets}" />
@@ -62,11 +62,11 @@
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.ShowAutoFilterRowProperty}" Value="{Binding GridUIOptions.ShowTheAutoFilterRow}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.ShowVerticalLinesProperty}" Value="{Binding GridUIOptions.ShowVerticalLines}" />
             <helpers:BindingInfo ElementName="GenderColumn" Property="{x:Static helpers:EditHelper.ItemsSourceProperty}" Value="{Binding PersonGenderEditData.List}" />
-            <helpers:ElementLayoutInfo ElementName="CustomersGrid" StoreFolder="GridControl:CustomersEdit-CustomersGrid" Store="{StaticResource ElementLayoutDataStore}" />
+            <helpers:ElementLayoutInfo ElementName="AthletsGrid" StoreFolder="GridControl:CustomersEdit-CustomersGrid" Store="{StaticResource ElementLayoutDataStore}" />
         </helpers:BindingsInfoCollection>
     </helpers:DataBindingsHelper.Bindings>
-    <Grid helpers:GridControlHelper.Grid="{Binding ElementName=CustomersGrid}">
-        <dxg:GridControl x:Name="CustomersGrid" View="{StaticResource TableView}">
+    <Grid helpers:GridControlHelper.Grid="{Binding ElementName=AthletsGrid}">
+        <dxg:GridControl x:Name="AthletsGrid" View="{StaticResource TableView}">
             <dxg:GridControl.Columns>
                 <dxg:GridColumn x:Name="GenderColumn" FieldName="Gender" Header="{helpers:ConstString ID=Gender}" Width="36">
                     <dxg:GridColumn.EditTemplate>
@@ -115,7 +115,7 @@
                 </dxg:GridColumn>
                 <dxg:GridColumn x:Name="CommentsColumn" FieldName="Comments" Header="{helpers:ConstString ID=Comments}" Width="50">
                     <dxg:GridColumn.CellStyle>
-                        <Style TargetType="dxg:CellContentPresenter">
+                        <Style TargetType="dxg:LightweightCellEditor">
                             <Setter Property="ToolTip" Value="{Binding RowData.Row.Comments, Converter={StaticResource ContentToControlConverter}, ConverterParameter={StaticResource TextToolTipTemplate}}" />
                         </Style>
                     </dxg:GridColumn.CellStyle>
