--- a/DevExpress.VideoRent.Wpf/CustomersList/CustomersEditView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomersList/CustomersEditView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="DevExpress.VideoRent.Wpf.CustomersEditView" x:Name="self"
+﻿<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
     xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:dxgc="clr-namespace:DevExpress.Xpf.Grid;assembly=DevExpress.Xpf.Grid.v13.1.Core"
+    xmlns:dxgc="clr-namespace:DevExpress.Xpf.Grid;assembly=DevExpress.Xpf.Grid.v21.2.Core"
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
@@ -15,6 +15,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:videorent="clr-namespace:DevExpress.VideoRent;assembly=DevExpress.VideoRent"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:viewmodel="clr-namespace:DevExpress.VideoRent.ViewModel;assembly=DevExpress.VideoRent.ViewModel" 
+    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" x:Class="DevExpress.VideoRent.Wpf.CustomersEditView" x:Name="self" 
+    d:DataContext="{d:DesignInstance Type={x:Type viewmodel:CurrentCustomerTransactionsEditObject}}"
     mc:Ignorable="d" d:DesignHeight="400" d:DesignWidth="900">
 
     <UserControl.Resources>
@@ -28,7 +31,7 @@
             <rhelpers:DrawingImageToImageConverter x:Key="CustomerPhotoTooltipConverter" Height="250" Stretch="Uniform" />
             <rhelpers:DrawingImageToImageSourceConverter x:Key="DrawingImageToImageSourceConverter" />
             <helpers:NullContentToBoolConverter x:Key="NullContentToBoolConverter" />
-            <helpers:BoolToAnyConverter x:Key="DisplayTextToImageSourceConverter" InnerConverter="{StaticResource NullContentToBoolConverter}" TrueValue="{Binding Source={StaticResource ReferenceImages}, Path=UnknownPerson, Converter={StaticResource DrawingImageToImageSourceConverter}}" />
+            <helpers:BoolToAnyConverter x:Key="DisplayTextToImageSourceConverter" InnerConverter="{StaticResource NullContentToBoolConverter}" TrueValue="{Binding UnknownPerson, Converter={StaticResource DrawingImageToImageSourceConverter}, Source={StaticResource ReferenceImages}}" />
             <helpers:NullContentToVisibilityConverter x:Key="NullContentToVisibilityConverter" />
             <helpers:ContentToControlConverter x:Key="ContentToControlConverter" />
             <helpers:DataSource x:Key="DataSource" />
@@ -43,22 +46,22 @@
                     <dxgc:GridViewNavigationStyle>Cell</dxgc:GridViewNavigationStyle>
                 </helpers:BoolToAnyConverter.TrueValue>
             </helpers:BoolToAnyConverter>
-            <dxg:TableView x:Key="TableView" ShowGroupedColumns="True" AutoWidth="True" AllowEditing="False" />
+            <dxg:TableView x:Key="TableView"  ShowGroupedColumns="True" AutoWidth="True" AllowEditing="False" />
         </ResourceDictionary>
     </UserControl.Resources>
     <helpers:DataBindingsHelper.Bindings>
-        <helpers:BindingsInfoCollection DataContext="{Binding Source={StaticResource DataSource}, Path=DataObject}">
-            <helpers:BindingInfo ElementName="resource:ElementLayoutDataStore" Property="{x:Static local:ElementLayoutDataStore.DisposeSignalSlotProperty}" Value="{Binding DisposeSignal}" />
-            <helpers:BindingInfo ElementName="CustomersGrid" Property="{x:Static  helpers:FocusedRowRestoringHelper.ItemsSourceInterfaceProperty}" Value="{Binding EditObject.VideoRentObjects}" />
-            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:GridViewBase.FocusedRowProperty}" Value="{Binding CurrentRecord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <helpers:BindingsInfoCollection DataContext="{Binding DataObject, Source={StaticResource DataSource}}">
+            <helpers:BindingInfo ElementName="resource:ElementLayoutDataStore" Property="{x:Static helpers:DisposableFrameworkElement.DisposeSignalSlotProperty}" Value="{Binding DisposeSignal}" />
+            <helpers:BindingInfo ElementName="CustomersGrid" Property="{x:Static helpers:FocusedRowRestoringHelper.ItemsSourceInterfaceProperty}" Value="{Binding EditObject.VideoRentObjects}" />
+            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxgc:DataViewBase.FocusedRowProperty}" Value="{Binding CurrentRecord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.MouseDoubleClickProperty}" Value="{Binding Detail.CommandEdit}" />
             <helpers:ValueInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.MouseDoubleClickParameterProperty}" Value="{x:Static local:WpfViewsManager.CategoryCustomers}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.EnterKeyDownProperty}" Value="{Binding Detail.CommandEdit}" />
             <helpers:ValueInfo ElementName="resource:TableView" Property="{x:Static helpers:CustomEventCommandHelper.EnterKeyDownParameterProperty}" Value="{x:Static local:WpfViewsManager.CategoryCustomers}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.AllowPerPixelScrollingProperty}" Value="{Binding GridUIOptions.AllowPerPixelScrolling}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.AllowCascadeUpdateProperty}" Value="{Binding GridUIOptions.AllowCascadeUpdate}" />
-            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:DataViewBase.AllowEditingProperty}" Value="{Binding GridUIOptions.AllowEditing}" />
-            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.NavigationStyleProperty}" Value="{Binding GridUIOptions.AllowEditing, Converter={StaticResource GridViewNavigationStyleConverter}}" />
+            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxgc:DataViewBase.AllowEditingProperty}" Value="{Binding GridUIOptions.AllowEditing}" />
+            <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxgc:DataViewBase.NavigationStyleProperty}" Value="{Binding GridUIOptions.AllowEditing, Converter={StaticResource GridViewNavigationStyleConverter}}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.ShowAutoFilterRowProperty}" Value="{Binding GridUIOptions.ShowTheAutoFilterRow}" />
             <helpers:BindingInfo ElementName="resource:TableView" Property="{x:Static dxg:TableView.ShowVerticalLinesProperty}" Value="{Binding GridUIOptions.ShowVerticalLines}" />
             <helpers:BindingInfo ElementName="GenderColumn" Property="{x:Static helpers:EditHelper.ItemsSourceProperty}" Value="{Binding PersonGenderEditData.List}" />
@@ -67,65 +70,61 @@
     </helpers:DataBindingsHelper.Bindings>
     <Grid helpers:GridControlHelper.Grid="{Binding ElementName=CustomersGrid}">
         <dxg:GridControl x:Name="CustomersGrid" View="{StaticResource TableView}">
-            <dxg:GridControl.Columns>
-                <dxg:GridColumn x:Name="GenderColumn" FieldName="Gender" Header="{helpers:ConstString ID=Gender}" Width="36">
-                    <dxg:GridColumn.EditTemplate>
-                        <ControlTemplate>
-                            <dxe:ComboBoxEdit x:Name="PART_Editor" Style="{StaticResource OnlyIconComboBoxEdit}"
-                                            ItemsSource="{Binding Path=DataContext.Column.(helpers:EditHelper.ItemsSource), RelativeSource={RelativeSource TemplatedParent}}"
-                                            EditValue="{Binding Path=EditValue, RelativeSource={RelativeSource TemplatedParent}}"
-                                            SelectedItem="{Binding Path=EditValue, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource GenderToGenderItemConverter}}" />
-                        </ControlTemplate>
-                    </dxg:GridColumn.EditTemplate>
-                    <dxg:GridColumn.DisplayTemplate>
-                        <ControlTemplate>
-                            <Image Stretch="None"
-                                            Source="{Binding Path=DisplayText, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource GenderToGenderIconConverter}}" RenderOptions.BitmapScalingMode="NearestNeighbor" />
-                        </ControlTemplate>
-                    </dxg:GridColumn.DisplayTemplate>
-                </dxg:GridColumn>
-                <dxg:GridColumn x:Name="CustomerIdColumn" FieldName="CustomerId" Header="{helpers:ConstString ID=CardNumber}" ReadOnly="True" Width="51" ColumnFilterMode="DisplayText">
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:TextEditSettings helpers:StyleConverter.Style="{StaticResource CardNumberTextEdit}" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-                <dxg:GridColumn x:Name="FullNameColumn" FieldName="FullName" Header="{helpers:ConstString ID=Name}" Width="135" />
-                <dxg:GridColumn x:Name="FirstNameColumn" FieldName="FirstName" Header="{helpers:ConstString ID=FirstName}" Visible="False" />
-                <dxg:GridColumn x:Name="LastNameColumn" FieldName="LastName" Header="{helpers:ConstString ID=LastName}" Visible="False" />
-                <dxg:GridColumn x:Name="MiddleNameColumn" FieldName="MiddleName" Header="{helpers:ConstString ID=MiddleName}" Visible="False" />
-                <dxg:GridColumn x:Name="BirthDateColumn" FieldName="BirthDate" Header="{helpers:ConstString ID=BirthDate}" local:ColumnByYearFilterHelper.IsEnabled="True" Width="64" ColumnFilterMode="DisplayText" AutoFilterCondition="Contains" />
-                <dxg:GridColumn x:Name="AddressColumn" FieldName="Address" Header="{helpers:ConstString ID=Address}" Width="300" />
-                <dxg:GridColumn x:Name="PhoneColumn" FieldName="Phone" Header="{helpers:ConstString ID=Phone}" Width="89" />
-                <dxg:GridColumn x:Name="PhotoColumn" FieldName="Photo" Header="{helpers:ConstString ID=Photo}" Width="50">
-                    <dxg:GridColumn.CellStyle>
-                        <Style TargetType="dxg:CellContentPresenter">
-                            <Setter Property="ToolTip" Value="{Binding RowData.Row.Photo, Converter={StaticResource CustomerPhotoTooltipConverter}}" />
-                        </Style>
-                    </dxg:GridColumn.CellStyle>
-                    <dxg:GridColumn.EditTemplate>
-                        <ControlTemplate>
-                            <dxe:PopupImageEdit x:Name="PART_Editor" Style="{StaticResource CustomerPhotoPopupImageEdit}" EditValue="{Binding Path=EditValue, RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource DrawingImageToImageSourceConverter}, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ShowBorder="False" />
-                        </ControlTemplate>
-                    </dxg:GridColumn.EditTemplate>
-                    <dxg:GridColumn.DisplayTemplate>
-                        <ControlTemplate>
-                            <dxe:PopupImageEdit EditValue="{Binding Path=DisplayText, RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource DisplayTextToImageSourceConverter},Mode=OneWay}" AllowDefaultButton="False" IsHitTestVisible="False" ShowBorder="False" />
-                        </ControlTemplate>
-                    </dxg:GridColumn.DisplayTemplate>
-                </dxg:GridColumn>
-                <dxg:GridColumn x:Name="CommentsColumn" FieldName="Comments" Header="{helpers:ConstString ID=Comments}" Width="50">
-                    <dxg:GridColumn.CellStyle>
-                        <Style TargetType="dxg:CellContentPresenter">
-                            <Setter Property="ToolTip" Value="{Binding RowData.Row.Comments, Converter={StaticResource ContentToControlConverter}, ConverterParameter={StaticResource TextToolTipTemplate}}" />
-                        </Style>
-                    </dxg:GridColumn.CellStyle>
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:MemoEditSettings helpers:StyleConverter.Style="{StaticResource MemoEdit}" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-            
-            
-            </dxg:GridControl.Columns>
+            <dxg:GridColumn x:Name="GenderColumn" FieldName="Gender" Header="{helpers:ConstString ID=Gender}" Width="36">
+                <dxg:GridColumn.EditTemplate>
+                    <ControlTemplate>
+                        <dxe:ComboBoxEdit x:Name="PART_Editor" Style="{StaticResource OnlyIconComboBoxEdit}"
+                                            ItemsSource="{Binding DataContext.Column.(helpers:EditHelper.ItemsSource), RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                            EditValue="{Binding EditValue, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                            SelectedItem="{Binding EditValue, Converter={StaticResource GenderToGenderItemConverter}, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                    </ControlTemplate>
+                </dxg:GridColumn.EditTemplate>
+                <dxg:GridColumn.DisplayTemplate>
+                    <ControlTemplate>
+                        <Image Stretch="None"
+                                            Source="{Binding DisplayText, Converter={StaticResource GenderToGenderIconConverter}, Mode=OneWay, RelativeSource={RelativeSource Mode=TemplatedParent}}" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                    </ControlTemplate>
+                </dxg:GridColumn.DisplayTemplate>
+            </dxg:GridColumn>
+            <dxg:GridColumn x:Name="CustomerIdColumn" FieldName="CustomerId" Header="{helpers:ConstString ID=CardNumber}" ReadOnly="True" Width="51" ColumnFilterMode="DisplayText">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:TextEditSettings helpers:StyleConverter.Style="{StaticResource CardNumberTextEdit}" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
+            <dxg:GridColumn x:Name="FullNameColumn" FieldName="FullName" Header="{helpers:ConstString ID=Name}" Width="135" />
+            <dxg:GridColumn x:Name="FirstNameColumn" FieldName="FirstName" Header="{helpers:ConstString ID=FirstName}" Visible="False" />
+            <dxg:GridColumn x:Name="LastNameColumn" FieldName="LastName" Header="{helpers:ConstString ID=LastName}" Visible="False" />
+            <dxg:GridColumn x:Name="MiddleNameColumn" FieldName="MiddleName" Header="{helpers:ConstString ID=MiddleName}" Visible="False" />
+            <dxg:GridColumn x:Name="BirthDateColumn" FieldName="BirthDate" Header="{helpers:ConstString ID=BirthDate}" local:ColumnByYearFilterHelper.IsEnabled="True" Width="64" ColumnFilterMode="DisplayText" AutoFilterCondition="Contains" />
+            <dxg:GridColumn x:Name="AddressColumn" FieldName="Address" Header="{helpers:ConstString ID=Address}" Width="300" />
+            <dxg:GridColumn x:Name="PhoneColumn" FieldName="Phone" Header="{helpers:ConstString ID=Phone}" Width="89" />
+            <dxg:GridColumn x:Name="PhotoColumn"  FieldName="Photo" Header="{helpers:ConstString ID=Photo}" Width="50">
+                <dxg:GridColumn.CellStyle>
+                    <Style TargetType="{x:Type dxg:LightweightCellEditor}">
+                        <Setter Property="ToolTip" Value="{Binding RowData.Row.Photo, Converter={StaticResource CustomerPhotoTooltipConverter}}" />
+                    </Style>
+                </dxg:GridColumn.CellStyle>
+                <dxg:GridColumn.EditTemplate>
+                    <ControlTemplate>
+                        <dxe:PopupImageEdit x:Name="PART_Editor" Style="{StaticResource CustomerPhotoPopupImageEdit}" EditValue="{Binding EditValue, Converter={StaticResource DrawingImageToImageSourceConverter}, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}, UpdateSourceTrigger=PropertyChanged}" ShowBorder="False" />
+                    </ControlTemplate>
+                </dxg:GridColumn.EditTemplate>
+                <dxg:GridColumn.DisplayTemplate>
+                    <ControlTemplate>
+                        <dxe:PopupImageEdit EditValue="{Binding DisplayText, Converter={StaticResource DisplayTextToImageSourceConverter}, Mode=OneWay, RelativeSource={RelativeSource Mode=TemplatedParent}}" AllowDefaultButton="False" IsHitTestVisible="False" ShowBorder="False" />
+                    </ControlTemplate>
+                </dxg:GridColumn.DisplayTemplate>
+            </dxg:GridColumn>
+            <dxg:GridColumn x:Name="CommentsColumn" FieldName="Comments" Header="{helpers:ConstString ID=Comments}" Width="50">
+                <dxg:GridColumn.CellStyle>
+                    <Style TargetType="{x:Type dxg:LightweightCellEditor}">
+                        <Setter Property="ToolTip" Value="{Binding RowData.Row.Comments, ConverterParameter={StaticResource TextToolTipTemplate}, Converter={StaticResource ContentToControlConverter}}" />
+                    </Style>
+                </dxg:GridColumn.CellStyle>
+                <dxg:GridColumn.EditSettings>
+                    <dxe:MemoEditSettings helpers:StyleConverter.Style="{StaticResource MemoEdit}" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>
         </dxg:GridControl>
     </Grid>
 </UserControl>
