--- a/DevExpress.VideoRent.Wpf/CustomersList/CustomersListView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomersList/CustomersListView.xaml
@@ -1,4 +1,4 @@
-﻿<mb:DemoModule xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"  x:Class="DevExpress.VideoRent.Wpf.CustomersListView"
+﻿<mb:DemoModule xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol" x:Class="DevExpress.VideoRent.Wpf.CustomersListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
@@ -15,7 +15,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                
     mc:Ignorable="d" d:DesignHeight="400" d:DesignWidth="900"
-    ShowMethodType="{DynamicResource ShowType}">
+    ShowMethodType="{DynamicResource ShowType}" Loaded="DemoModule_Loaded">
 
     <mb:DemoModule.Resources>
         <ResourceDictionary>
@@ -94,7 +94,6 @@
                 </dxr:RibbonDefaultPageCategory>
             </dxr:RibbonControl>
         </dxb:BarManager>
-
         <dxdo:DockLayoutManager  Grid.Row="1">
             <dxdo:LayoutGroup  Orientation="Vertical" Background="Transparent">
                 <dxdo:LayoutPanel ShowCaption="False" ShowBorder="False" Caption="{helpers:ConstString ID=Companies}" Background="Transparent">
